--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -14,8 +14,8 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
   title="Software"
   description="Have experience in C/C++, C#, and Java to create computer software"
 >
-  <LayoutSection row class="items-center">
-    <Section noMargin textContent class="sm:w-2/3">
+  <LayoutSection col noMedia class="items-center">
+    <Section noMargin textContent class="md:w-2/3">
       <h1>Experience Summary</h1>
       <p>
         Was taught in various languages and frameworks. Have solid foundations
@@ -34,12 +34,7 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
     </Section>
     {
       softwareExp && (
-        <BadgeDisplay
-          noMargin
-          class="flex-grow"
-          title="Software Experiences"
-          src={softwareExp}
-        />
+        <BadgeDisplay noMargin title="Software Experiences" src={softwareExp} />
       )
     }
   </LayoutSection>
