--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -19,7 +19,7 @@ const experiencesBackend = experiences.find(
   title="Web"
   description="Have experience in React, Vue, Angular, Gatsby, and now Astro, to develop websites."
 >
-  <Section textContent class="sm:mx-auto sm:w-2/3">
+  <Section textContent class="md:mx-auto md:w-2/3">
     <h1>Experience Summary</h1>
     <p>
       Was taught how to do front-end and back-end in the CPA3 program at
