--- a/src/pages/comp-experience/mobile/index.astro
+++ b/src/pages/comp-experience/mobile/index.astro
@@ -14,8 +14,8 @@ const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
   title="Mobile"
   description="Have experience in Android Studio and React Native to create Android apps"
 >
-  <LayoutSection row class="justify-center">
-    <Section noMargin textContent class="sm:w-1/3">
+  <LayoutSection col noMedia class="items-center">
+    <Section noMargin textContent>
       <h1>Experience Summary</h1>
       <p>
         Was taught how to use both Android Studio and React Native to develop
@@ -25,12 +25,7 @@ const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
     </Section>
     {
       mobileExp && (
-        <BadgeDisplay
-          noMargin
-          class="flex-grow"
-          title="Mobile Experiences"
-          src={mobileExp}
-        />
+        <BadgeDisplay noMargin title="Mobile Experiences" src={mobileExp} />
       )
     }
   </LayoutSection>
