ExperienceBadge is smaller on mobile

--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -11,7 +11,7 @@ if (!icons[src]) throw new Error(`"${src} does not exist in glob", ${icons}`);
 ---
 
 <div
-  class="group relative flex flex-col gap-1 justify-around items-center size-32 bg-sky-900 p-4 rounded-md
+  class="group relative flex flex-col gap-1 justify-around items-center size-28 md:size-32 bg-sky-900 p-4 rounded-md
           hover:scale-110 transition-transform"
 >
   <div
