--- a/src/components/Navbar/NavbarDesktop.astro
+++ b/src/components/Navbar/NavbarDesktop.astro
@@ -20,7 +20,7 @@ const props = Astro.props;
 >
   <div class="sticky top-0 flex flex-col px-4 py-8 justify-between h-screen">
     <nav>
-      <span class="text-2xl">Navigation</span>
+      <span class="text-2xl opacity-50">Navigation</span>
       {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
     </nav>
     <div class="flex gap-2">
