--- a/src/components/Navbar/NavbarMobile.astro
+++ b/src/components/Navbar/NavbarMobile.astro
@@ -27,9 +27,9 @@ const props = Astro.props;
     {...props}
   >
     <div>
-      <div class="flex justify-between text-4xl">
-        <div class="py-1">Navigation</div>
-        <button id="mobile-nav-go-back-btn">X</button>
+      <div class="flex justify-between items-center">
+        <div class="py-1 opacity-50 text-2xl">Navigation</div>
+        <button id="mobile-nav-go-back-btn" class="text-4xl">X</button>
       </div>
       {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
     </div>
