--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,11 +16,13 @@ const props = Astro.props;
     {
       SITE_NAVIGATION.map((nav) => (
         <div class="flex flex-col justify-center items-start flex-wrap p-2 bg-sky-900 bg-opacity-50 rounded-md">
-          <a href={nav.href}>{nav.label}</a>
+          <a href={nav.href} class="sm:text-sm">
+            {nav.label}
+          </a>
           {nav.children && (
             <div class="flex flex-row gap-2 flex-wrap text-sky-100">
               {nav.children.map((cnav) => (
-                <a href={`${nav.href}${cnav.href}`} class="text-sm">
+                <a href={`${nav.href}${cnav.href}`} class="text-sm sm:text-xs">
                   {cnav.label}
                 </a>
               ))}
@@ -30,5 +32,7 @@ const props = Astro.props;
       ))
     }
   </div>
-  <div class="text-sm text-center [writing-mode:vertical-rl]">Site Map</div>
+  <div class="text-xs sm:text-sm text-center [writing-mode:vertical-rl]">
+    Site Map
+  </div>
 </footer>
