Simplify and finalized the Navigation area

--- a/src/components/ContainerContent.astro
+++ b/src/components/ContainerContent.astro
@@ -9,10 +9,10 @@ const { class: className } = Astro.props;
 <div
   class:list={[
     className,
-    "rounded-md overflow-hidden border-4 border-cyan-950 bg-cyan-900 bg-opacity-75",
+    "rounded-md overflow-hidden border-4 border-sky-950 bg-sky-900 bg-opacity-75",
   ]}
 >
-  <div class="bg-cyan-950 p-1 break-words">
+  <div class="bg-sky-950 p-1 break-words">
     <slot name="header" />
   </div>
   <slot />
