--- a/src/components/Navbar/NavbarMobile.astro
+++ b/src/components/Navbar/NavbarMobile.astro
@@ -1,5 +1,6 @@
 ---
 import type { HTMLAttributes } from "astro/types";
+import { Icon } from "astro-icon/components";
 
 import { SITE_NAVIGATION } from "../../const";
 
@@ -17,7 +18,7 @@ const props = Astro.props;
 <nav-bar class:list={[props.class]} {...props}>
   <button
     class="sticky top-0 w-full z-50 p-4 text-4xl text-left bg-gradient-to-b from-sky-900 to-transparent"
-    >Navigation</button
+    ><Icon name="list" /></button
   >
   <nav
     class:list={[
@@ -26,12 +27,14 @@ const props = Astro.props;
     ]}
     {...props}
   >
-    <div>
-      <div class="flex justify-between items-center">
-        <div class="py-1 opacity-50 text-2xl">Navigation</div>
-        <button id="mobile-nav-go-back-btn" class="text-4xl">X</button>
+    <div class="flex">
+      <div class="flex-grow">
+        <span class="text-xl opacity-50">Navigation</span>
+        {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
       </div>
-      {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
+      <button id="mobile-nav-go-back-btn" class="self-start text-4xl"
+        ><Icon name="close-btn" /></button
+      >
     </div>
     <div class="flex gap-4 my-1">
       <SocialLink name="linkedin" size={48} />
