Add size to the Icon in ExperienceBadge

--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -17,7 +17,7 @@ const { title, src, experience } = Astro.props;
   >
     {title}
   </div>
-  <Icon name={src} class="flex-grow size-14 sm:size-18 md:size-20" />
+  <Icon name={src} class="flex-grow size-14 sm:size-18 md:size-20" size={80} />
   <div class="w-fit mx-auto p-1 text-center text-sm bg-sky-950 rounded-md">
     {experience}
   </div>
