--- a/src/components/ContainerContent.astro
+++ b/src/components/ContainerContent.astro
@@ -3,7 +3,7 @@ import type { HTMLAttributes } from "astro/types";
 
 type Props = HTMLAttributes<"div">;
 
-const { class: className } = Astro.props;
+const { class: className, ...props } = Astro.props;
 ---
 
 <div
@@ -11,6 +11,7 @@ const { class: className } = Astro.props;
     className,
     "rounded-md overflow-hidden border-4 border-sky-950 bg-sky-900 bg-opacity-75",
   ]}
+  {...props}
 >
   <div class="bg-sky-950 p-1 break-words">
     <slot name="header" />
