--- a/src/components/Navbar/NavLink.astro
+++ b/src/components/Navbar/NavLink.astro
@@ -1,8 +1,6 @@
 ---
 /**
- * Purpose: Represent a link in the navigation bar on the side
- *          Carries the link and its children.
- * Note: Uses only minimal JS to load in quickly
+ * Represent a link in the navigation bar on the side carries the link and its children.
  */
 
 import type { NavLinkType } from "../../types";
