--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -1,7 +1,7 @@
 ---
 import { SITE_NAVIGATION } from "../../const";
 
-import Layout from "../../layouts/PageLayout.astro";
+import Layout from "../../layouts/BaseLayout.astro";
 import Section from "../../components/Section.astro";
 import LayoutSection from "../../components/LayoutSection.astro";
 
