--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,11 +5,11 @@ import { SITE_NAVIGATION } from "../const";
 
 type Props = HTMLAttributes<"footer">;
 
-const props = Astro.props;
+const { class: className, ...props } = Astro.props;
 ---
 
 <footer
-  class:list={["flex justify-end items-center gap-2 m-4", props.class]}
+  class:list={["flex justify-end items-center gap-2 m-4", className]}
   {...props}
 >
   <div class="flex flex-row justify-start items-start gap-2 flex-wrap">
