--- a/src/components/Icons/LinkIcon.astro
+++ b/src/components/Icons/LinkIcon.astro
@@ -1,14 +1,13 @@
 ---
-import { Icon } from "astro-icon/components";
 import type { HTMLAttributes } from "astro/types";
+import { Icon } from "astro-icon/components";
 
 interface Props extends HTMLAttributes<"a"> {
   name: string;
-  title?: string;
   size?: number | string;
 }
 
-const { name, href, title, size, class: className } = Astro.props;
+const { name, href, size, class: className } = Astro.props;
 ---
 
 <a class={className} href={href} target="_blank">
