--- a/src/pages/art-experience/index.astro
+++ b/src/pages/art-experience/index.astro
@@ -1,6 +1,6 @@
 ---
 import Section from "../../components/Section.astro";
-import Layout from "../../layouts/PageLayout.astro";
+import Layout from "../../layouts/BaseLayout.astro";
 ---
 
 <Layout
