--- a/src/pages/comp-experience/game/[id].astro
+++ b/src/pages/comp-experience/game/[id].astro
@@ -1,7 +1,7 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection, render } from "astro:content";
+
 import ArticleLayout from "../../../layouts/ArticleLayout.astro";
-import { render } from "astro:content";
 
 export async function getStaticPaths() {
   const articles = await getCollection("gameArticles");
