--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * Custom Section element that holds the default styling for majority of the site.
+ */
 import type { HTMLAttributes } from "astro/types";
 import type { MalleableComponentType, ContentComponentType } from "../types";
 
