--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Builds off from the BaseLayout and is used to create the articles.
+ */
+
 import "../styles/article.css";
 
 import type { ImageMetadata } from "astro";
