--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * The base of the entire website.
+ * It holds the metadata in the head, Navbars, and holds the main content.
+ */
 import Footer from "../components/Footer.astro";
 import BaseHead from "../components/BaseHead.astro";
 
