--- a/src/pages/comp-experience/game/[id].astro
+++ b/src/pages/comp-experience/game/[id].astro
@@ -1,4 +1,7 @@
 ---
+/**
+ * Blog like articles of game projects.
+ */
 import { getCollection, render } from "astro:content";
 
 import ArticleLayout from "../../../layouts/ArticleLayout.astro";
