--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Explores my experience as a game developer.
+ * Highlights my intrigue in game development and my thought process in these games.
+ */
 import { getCollection } from "astro:content";
 
 import Layout from "../../../layouts/BaseLayout.astro";
