--- a/src/pages/comp-experience/mobile/index.astro
+++ b/src/pages/comp-experience/mobile/index.astro
@@ -1,4 +1,10 @@
 ---
+/**
+ * Explores my experience in mobile development.
+ * Highlighting a project I made in Fanshawe of a to-do
+ * application with decent UI that's quick and simple.
+ */
+
 import { getCollection } from "astro:content";
 
 import Layout from "../../../layouts/BaseLayout.astro";
