--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -1,4 +1,9 @@
 ---
+/**
+ * Explores my experience in the general software development.
+ * Highlighting my potential strength and intrigue in low-level computers.
+ */
+
 import { getCollection } from "astro:content";
 
 import Layout from "../../../layouts/BaseLayout.astro";
