--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -1,4 +1,10 @@
 ---
+/**
+ * Explores my experience as a web developer.
+ * Highlight how I made this site by exploring other technologies and
+ * then settling on Astro.
+ */
+
 import { getCollection } from "astro:content";
 
 import Layout from "../../../layouts/BaseLayout.astro";
