--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Landing introduction page. It's to give a good brief explaination of my skills
+ * and current experience. (As of Jan 11, 2024, I have no work experience).
+ */
 import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
 
