--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -1,4 +1,8 @@
 ---
+/**
+ * Explores my career in computer science. So far, my experience has been fairly limited.
+ */
+
 import { SITE_NAVIGATION } from "../../const";
 
 import Layout from "../../layouts/BaseLayout.astro";
